$Id: ChangeLog,v 1.541 2009/03/09 08:15:14 haraldkipp Exp $

2009-03-09  Harald Kipp  <harald.kipp@egnite.de>

	* MOVING TO SUBVERSION. PLEASE DO NOT COMMIT ANY MORE CHANGES
	TO CVS HEAD.

	* configure.ac, os/version.c: Release candidate 4.7.99.


2009-03-08  Harald Kipp  <harald.kipp@egnite.de>

	* app/basemon/Makefile, app/httpd/Makefile: Added libnutgorp
	to fix linker error.

	* app/pppc/pppc.c: AVR compile error fixed. lctl is required.

	* gorp/base64/base64_decode.c, gorp/base64/base64_encode.c,
	include/gorp/md5.h: Replaced inttypes.h by stdint.h. The latter 
	is sufficient while the first is not always available.

	* gorp/hashes/md5.c: Replaced const by CONST to make it compile
	with ICCAVR.

	* include/dev/board.h: Fixed missing UART device for AVR.

	* Makefile.am: Included gorp in automake.

	* tools/nutconf/scrolledtree.cpp, tools/nutconf/scrolledtree.h,
	tools/nutconf/nutconf.h: Dummy scrollbar in tree window fixed.


2009-03-08  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* include/gorp: Added missing header files to CVS
	
2009-03-06  Ole Reinhardt <ole.reinhardt@thermotemp.de>
	* gorp: Added gorp ("Studentenfutter") directory

	* gorp/Makefile: Makefile for in-source-tree compilation added

	* gorp/hashes/md5*: Added first code snippets: md5 routines

	* gorp/base64/base64_encode, gorp/base64/base64_encode: 
	  Added base64 encoding and decoding routines

	* lib/Makefile: Added gorp directory

	* conf/gorp/gorp.nut: Added configurator file for gorp library

	* conf/repository.nut: Added gorp library

	* conf/tools.nut: Added at91_bootloader_bootcrom ldscript

	* pro/auth.c: Use base64 decoder from gorp/base64/base64_decode.c
	  instead from dencode.c

	* pro/dencode.c, pro/dencode.h: Moved base64 decoder to
	  gorp/base64/base64_decode.c

2009-03-05  Matthias Ringwald <mringwal@inf.ethz.ch>
    * arch/unix/dev/ostimer.c, arch/unix/os/nutinit.c:
         added return NULL to make compiler happy